# goyotashi-server

./: Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml  readme.md  release.docker-compose.yml
docs/: README.md  _sidebar.md  index.html  install.md
docs/auth_emu/: index.html
docs/endpoint/: auth.md
docs/endpoint/community/: create.md  search.md  show.md  update.md
docs/endpoint/gplace/: search.md
docs/endpoint/me/: community.md
docs/endpoint/member/: create.md
docs/endpoint/restaurant/: add.md  index.md  search.md  show.md
docs/endpoint/review/: create.md
docs/endpoint/user/: create.md  index.md  show.md
sql/: 1-2020-03-20.sql  2020-03-20.sql
src/: main.rs
src/controller/: mod.rs
src/controllers/: community.rs  err.rs  me.rs  mod.rs  restaurant.rs  review.rs  user.rs
src/errors/: mod.rs
src/logic/: authorize.rs  http.rs  mod.rs  privilege.rs  vendor.rs
src/mapper/: community.rs  member.rs  mod.rs  pin.rs  restaurant.rs  review.rs  user.rs
src/models/: mod.rs
src/services/: community.rs  firebase.rs  member.rs  mod.rs  restaurant.rs  review.rs  user.rs
