[package]
name = "goyotashi_server"
version = "0.1.0"
authors = ["face0u0"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "5" # should be update
reqwest = {version = "0.10.4", features = ["blocking", "json"]}

rocket = "0.4.4"
rocket_contrib = { version = "0.4", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"

postgres = "0.17.2"
